  - viewer - can find nodes for pcap based on --host
  - viewer - in multiviewer mode can now select which clusters to search (PR #1325)
  - viewer - fix addTag/removeTag with multiviewer (PR #1556)
  - viewer - can modify some sessions2 template from esadmin tab
  - viewer - can modify entire shortcuts now
  - viewer - spigraph visualization improvements
  - wise - new config UI, enable with --webconfig
  - wise - more moloch->arkime changes
  - wise - for json data can now set arrayPath for start of where to parse
  - wise - new elasticsearchfile type
  - wise - threatstream results now cached
  - wise - support memcached for cache
  - all - renamed rightclicks to valueactions
  - esproxy - first version, see https://arkime.com/esproxy

2.7.1 2020/12/01
  - release - glib 2.66.2, curl 7.73.0, nghttp2 1.42.0
  - wise - fix UI queries hanging
  - viewer - fix anonymous user settings not saving
  - viewer - fix lastUsed time not always saving to ES
  - capture - new packet dedup feature https://arkime.com/settings#packet-deduplication-settings
  - capture - close pfring on exit (issue #1538)
  - capture - fix http2 parsing crash
  - db - Moloch to Arkime text fixes

2.7.0 2020/11/18
  - NOTICE - Requires ES 7.4 or newer
  - NOTICE - Moloch to Arkime rebranding in UI, everything else still Moloch
  - all - ES 7 updates, fix most depreciated warnings (mappings/templates still remain)
  - viewer - fix mpls decoding
  - viewer - new themes and logo selection
  - capture - fix http CONNECT response parsing
  - capture - New pcap-over-ip reader support
  - db - can import gz files directly now
  - db - fix issues with version importing

2.4.2 2020/11/10
  - NOTICE - db.pl upgrade is required
  - NOTICE - this is the last version to support ES 6
  - release - node 12.19.0
  - viewer - support utf8 chars in content-disposition
  - viewer - add capture process restart to timeline graphs
  - viewer - add "bookmarks"